<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".FicheClient"
    tools:showIn="@layout/activity_fiche_client">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/title-ficheClient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/ficheClient"
            android:textAlignment="center"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/nom-ficheClient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:forceHasOverlappingRendering="false"
            android:text="@string/nomClient"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/adresse-ficheClient2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adresseClient"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/adresse-ficheClient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvTest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <Button
                android:id="@+id/btListeContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mes_contacts" />

            <Button
                android:id="@+id/btMateriel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mon_materiel" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>