<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ModificationAction">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/ficheClientEdit"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/editName" />

        <EditText
            android:id="@+id/editAdress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/editAdresse" />

        <EditText
            android:id="@+id/editAdress2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/editAdresse2" />

        <EditText
            android:id="@+id/editTel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/editTel" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/btValiderEdit"
                android:layout_width="wrap_content"
                android:layout_height="58dp"
                android:layout_weight="1"
                android:contentDescription="Valider"
                app:srcCompat="@android:drawable/checkbox_on_background"
                tools:srcCompat="@android:drawable/checkbox_on_background" />

            <ImageButton
                android:id="@+id/btAnnulerEdit"
                android:layout_width="40dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:contentDescription="Annuler"
                app:srcCompat="@android:drawable/ic_delete" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>